Click NEWS

Version 1.3pre1

* Incompatible changes

** The 'Queue' element is now a NotifierQueue. To access a queue without
   notification, use 'SimpleQueue'.

** The semantics of IPFilter 'deny' arguments have changed. Now, 'deny'
   means the same thing as 'drop'. The old behavior was inappropriately
   surprising.

** Deprecated KernelTap element in favor of KernelTun.

** '--enable-clickfs' is the default. (Clickfs provides a symlink from
   /proc/click to /click to make upgrading easier.)

** Removed elements deprecated in 1.2.4. This includes LookupIPRoute,
   LookupIPRouteLinux, FromLinux, ToLinux, ToLinuxSniffers, PeekHandlers,
   ProbSplitter, and RandomLossage.

** The 'void Element::run_scheduled()' method has been deprecated; use
   'bool Element::run_task()' or 'void Element::run_timer()' instead.
   'run_task()'s bool return value should be true iff the task managed to
   do some useful work. (This helps the adaptive scheduler.)

** HandlerCall's interface has changed. So have the raw functions for
   accessing handlers from a Router object.

** Element map files now use an XML format, and are called 'elementmap.xml'
   or 'elementmap-PACKAGE.xml', not 'elementmap' or 'elementmap.PACKAGE'.

** LLRPCs now explicitly encode the amount of data they transfer to and
   from the caller, using the same mechanism as ioctl(). This made it
   possible to remove the local_llrpc() virtual method.

** Removed deprecated header files like <click/click_ip.h>.

** Changed ICMP structure and macro names in <clicknet/icmp.h>.

** Removed deprecated Element methods and method signatures, including
   'Element::uninitialize()', 'Element::configure(const Vector<String> &)',
   and 'Element::live_reconfigure(const Vector<String> &)'.

** Click declarations and definitions are now surrounded with CLICK_DECLS
   and CLICK_ENDDECLS macros (see any source file for an example). These
   macros normally do nothing. In the 'ns' driver, though, they drop all