@@ -1,9 +1,9 @@
 // -*- mode: c++; c-basic-offset: 4 -*-
 /*
- * mergebyts.{cc,hh} -- element merges sorted packet streams by timestamp
+ * timesortedsched.{cc,hh} -- element merges sorted packet streams by timestamp
  * Eddie Kohler
  *
- * Copyright (c) 2001 International Computer Science Institute
+ * Copyright (c) 2001-2003 International Computer Science Institute
  *
  * Permission is hereby granted, free of charge, to any person obtaining a
  * copy of this software and associated documentation files (the "Software"),
@@ -18,72 +18,86 @@
 
 #include <click/config.h>
 #include <click/error.hh>
-#include "mergebyts.hh"
+#include "timesortedsched.hh"
 #include <click/standard/scheduleinfo.hh>
 #include <click/confparse.hh>
 #include <click/router.hh>
 CLICK_DECLS
 
-MergeByTimestamp::MergeByTimestamp()
-    : Element(1, 1), _vec(0)
+TimeSortedSched::TimeSortedSched()
+    : Element(1, 1), _vec(0), _signals(0)
 {
     MOD_INC_USE_COUNT;
 }
 
-MergeByTimestamp::~MergeByTimestamp()
+TimeSortedSched::~TimeSortedSched()
 {
     MOD_DEC_USE_COUNT;
-    delete[] _vec;
+}
+
+void *
+TimeSortedSched::cast(const char *n)
+{
+    if (strcmp(n, "Notifier") == 0)
+	return (Notifier *)this;
+    else
+	return Element::cast(n);
 }
 
 void
-MergeByTimestamp::notify_ninputs(int n)
+TimeSortedSched::notify_ninputs(int n)
 {
     set_ninputs(n);
 }
 
 int
-MergeByTimestamp::configure(Vector<String> &conf, ErrorHandler *errh)
+TimeSortedSched::configure(Vector<String> &conf, ErrorHandler *errh)
 {
+    Notifier::initialize(router());
     _stop = false;
-    _dead_null = false;
     return cp_va_parse(conf, this, errh,
 		       cpKeywords,
 		       "STOP", cpBool, "stop when queue empty?", &_stop,
-		       "NULL_IS_DEAD", cpBool, "inputs are dead once they return null?", &_dead_null,
 		       0);
 }
 
 int 
-MergeByTimestamp::initialize(ErrorHandler *errh)
+TimeSortedSched::initialize(ErrorHandler *errh)
 {
     _vec = new Packet *[ninputs() + 1];
-    if (!_vec)
+    _signals = new NotifierSignal[ninputs() + 1];
+    if (!_vec || !_signals)
 	return errh->error("out of memory!");
-    for (int i = 0; i < ninputs(); i++)
+    for (int i = 0; i < ninputs(); i++) {
 	_vec[i] = 0;
-    _new = true;
+	_signals[i] = Notifier::upstream_pull_signal(this, i);
+    }
     return 0;
 }
 
 void
-MergeByTimestamp::cleanup(CleanupStage)
+TimeSortedSched::cleanup(CleanupStage)
 {
     if (_vec)
 	for (int i = 0; i < ninputs(); i++)
 	    if (_vec[i])
 		_vec[i]->kill();
+    delete[] _vec;
+    delete[] _signals;
 }
 
 Packet *
-MergeByTimestamp::pull(int)
+TimeSortedSched::pull(int)
 {
     int which = -1;
     struct timeval *tv = 0;
-    bool live_null = (!_dead_null || _new);
+    int signals_on = 0;
+    
     for (int i = 0; i < ninputs(); i++) {
-	if (!_vec[i] && live_null)
+	if (!_vec[i] && _signals[i]) {
 	    _vec[i] = input(i).pull();
+	    signals_on = 1;
+	}
 	if (_vec[i]) {
 	    struct timeval *this_tv = &_vec[i]->timestamp_anno();
 	    if (!tv || timercmp(this_tv, tv, <)) {
@@ -93,18 +107,17 @@ MergeByTimestamp::pull(int)
 	}
     }
 
-    _new = false;
-    
+    set_listeners(which >= 0 || signals_on);
     if (which >= 0) {
 	Packet *p = _vec[which];
 	_vec[which] = input(which).pull();
 	return p;
     } else {
-	if (_stop)
+	if (_stop && !signals_on)
 	    router()->please_stop_driver();
 	return 0;
     }
 }
 
 CLICK_ENDDECLS
-EXPORT_ELEMENT(MergeByTimestamp)
+EXPORT_ELEMENT(TimeSortedSched)
